@@ -1,3 +1,10 @@
+2011-06-06  Hedayat Vatankhah  <hedayat.fwd@gmail.com>
+
+	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp
+	 (SoccerRuleAspect::AnalyseTouchGroups):
+	- fixed a horrible mistake of mine which prevented from touch group rules
+	  to be applied at all 
+
 2011-05-14  Hedayat Vatankhah  <hedayat.fwd@gmail.com>
 
 	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp 
